--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon"
+          href="#">
     <title>Daily Tracker</title>
   </head>
   <body>
